Fix issue (openjdk11 instead of openjdk8)